--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,8 @@
 <html>
-<head>
+  <head>
   </head>
   <body>
-    <h1>hello, world</h1>
+    <h1>Hello, World!</h1>
+    <!-- This is an unwanted but committed change -->
   </body>
 </html>
-<!-- Added HI TAG -->
