--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,8 @@
+(marina@githowto.com)
 <html>
-<head>
+  <head>
   </head>
   <body>
-    <h1>hello, world</h1>
+    <h1>Hello, World!</h1>
   </body>
 </html>
-<!-- Added HI TAG -->
